# px4-med

./: .gitignore  AneeshMARL5.py  README.md  pyproject.toml  train.py
docker/: start_multi.sh
models/: agent_marl9.pth  ctde_agent_marl9.pth
scripts/: __init__.py  check_sitl.py  make_paper_core_12h_figures.py  run_overnight_validation.py  smoke_policy.py  visualize_offline_policy.py
src/px4med/: __init__.py  actions.py  baselines.py  coordinator.py  docker_manager.py  drone.py  environment.py  experiments.py  main.py  metrics.py  policy.py  state.py
tests/: test_actions.py  test_coordinator.py  test_policy.py  test_state.py
