[tool.poetry]
name = "px4med"
version = "0.1.0"
description = "CTDE MARL policy deployment on PX4 SITL for two-drone medical supply delivery"
authors = []
readme = "README.md"
packages = [{include = "px4med", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.0.0"
mavsdk = ">=1.4.0"
numpy = ">=1.24.0"
pyyaml = ">=6.0"
jsonlines = ">=3.1.0"
docker = ">=6.0.0"
pygame = "^2.6.1"
matplotlib = ">=3.8.0"

[tool.poetry.scripts]
px4med = "px4med.main:main"
px4med-experiments = "px4med.experiments:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
